# smart_snake

./: .dir-locals.el  CMakeLists.txt  CMakelists.txt
CMake/: FindECL.cmake  FindPDCurses.cmake  FindReadline.cmake
include/: config.h  console.h  dir.h  game.h  node.h  snake.h  util.h
lib/pdcurses/include/: curses.h
lisp/: CMakeLists.txt  embedded-console.asd  embedded-console.lisp
src/: CMakeLists.txt  CMakelists.txt  config.c  console.c  dir.c  game.c  main.c  node.c  snake.c  util_unix.c  util_w32.c
